...
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="@+id/cancel_button"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/ok_button"
                    app:layout_constraintTop_toBottomOf="@+id/password_text_view"
                    app:layout_constraintWidth_max="@dimen/button_max_length">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_input_password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>
...
