<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="com.coupleblog.fragment.LoginBinding">

        <variable
            name="fragment"
            type="com.coupleblog.fragment.CB_LoginFragment" />

        <variable
            name="viewModel"
            type="com.coupleblog.singleton.CB_ViewModel.Companion" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="@dimen/admob_banner_bottom_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.CB_LoginFragment">

        <TextView
            android:id="@+id/forgot_password_text_view"
            style="@style/normal_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="@{()->fragment.forgotPasswordButton()}"
            android:text="@string/str_forgot_password"
            android:textColor="@color/link_color"
            app:layout_constraintEnd_toEndOf="@+id/password_text_input_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/left_margin_line"
            app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout" />

        <TextView
            android:id="@+id/title_text_view"
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/version_text_view"
            style="@style/subtitle_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:text="@{viewModel.strVersion}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="1.1.1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/right_margin_line"
            app:layout_constraintStart_toStartOf="@+id/left_margin_line"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view"
            app:layout_constraintWidth_max="@dimen/button_max_length">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/right_margin_line"
            app:layout_constraintStart_toStartOf="@+id/left_margin_line"
            app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout"
            app:layout_constraintWidth_max="@dimen/button_max_length">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/mtrl_button_style"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_32dp"
            android:backgroundTint="@color/purple"
            android:onClick="@{()->fragment.signInButton()}"
            android:text="@string/str_sign_in"
            app:layout_constraintEnd_toStartOf="@+id/right_margin_line"
            app:layout_constraintStart_toStartOf="@+id/left_margin_line"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_text_view"
            app:rippleColor="@color/ripple_purple" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_margin_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_margin_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_16dp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            app:layout_constraintEnd_toStartOf="@+id/right_margin_line"
            app:layout_constraintStart_toStartOf="@+id/left_margin_line"
            app:layout_constraintTop_toBottomOf="@+id/login_button">


            <TextView
                android:id="@+id/register_msg_text_view"
                style="@style/normal_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/str_register_msg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/register_text_view"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/register_text_view"
                style="@style/normal_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="@{()->fragment.registerButton()}"
                android:text="@string/str_register"
                android:textColor="@color/link_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/register_msg_text_view"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>