...
        android:id="@+id/CB_PermissionFragment"
        android:name="com.coupleblog.fragment.CB_PermissionFragment"
        android:label="fragment_cb_permission"
        tools:layout="@layout/fragment_cb_permission" >
        <action
            android:id="@+id/action_CB_PermissionFragment_to_CB_LoginFragment"
            app:destination="@id/CB_LoginFragment" />
    </fragment>

    <fragment
        android:id="@+id/CB_LoginFragment"
        android:name="com.coupleblog.fragment.CB_LoginFragment"
        android:label="fragment_cb_login"
        tools:layout="@layout/fragment_cb_login" >
        <action
            android:id="@+id/action_CB_LoginFragment_to_CB_MainFragment"
            app:destination="@id/CB_MainFragment" />
        <action
            android:id="@+id/action_CB_LoginFragment_to_CB_RegisterFragment"
            app:destination="@id/CB_RegisterFragment" />
    </fragment>

    <fragment
...
