<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment_parent">

    <data class="com.coupleblog.fragment.MainBinding">
        <variable
            name="fragment"
            type="com.coupleblog.fragment.CB_MainFragment" />
    </data>
...
